// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all methods 1`] = `
Object {
  "_isJSONSchemaObject": true,
  "addPatternProperty": [Function],
  "addProperty": [Function],
  "additionalProperties": Object {
    "_isJSONSchemaObject": true,
    "addPatternProperty": [Function],
    "addProperty": [Function],
    "complie": [Function],
    "fromJSON": [Function],
    "mapPatternProperties": [Function],
    "mapProperties": [Function],
    "reducePatternProperties": [Function],
    "reduceProperties": [Function],
    "removePatternProperty": [Function],
    "removeProperty": [Function],
    "setAdditionalItems": [Function],
    "setAdditionalProperties": [Function],
    "setItems": [Function],
    "setPatternProperties": [Function],
    "setProperties": [Function],
    "toJSON": [Function],
    "type": "string",
    "version": "2.0",
    "x-decorator": "FormItem",
  },
  "complie": [Function],
  "fromJSON": [Function],
  "mapPatternProperties": [Function],
  "mapProperties": [Function],
  "patternProperties": Object {
    "^[a-zA-Z0-9]*$": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "properties": Object {
        "made": Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "name": "made",
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 1,
        },
        "model": Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "name": "model",
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 2,
        },
        "year": Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "name": "year",
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 0,
        },
      },
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "version": "2.0",
      "x-decorator": "FormItem",
    },
  },
  "properties": Object {
    "array": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "additionalItems": Object {
        "_isJSONSchemaObject": true,
        "addPatternProperty": [Function],
        "addProperty": [Function],
        "complie": [Function],
        "fromJSON": [Function],
        "mapPatternProperties": [Function],
        "mapProperties": [Function],
        "reducePatternProperties": [Function],
        "reduceProperties": [Function],
        "removePatternProperty": [Function],
        "removeProperty": [Function],
        "setAdditionalItems": [Function],
        "setAdditionalProperties": [Function],
        "setItems": [Function],
        "setPatternProperties": [Function],
        "setProperties": [Function],
        "toJSON": [Function],
        "type": "string",
        "version": "2.0",
        "x-decorator": "FormItem",
      },
      "complie": [Function],
      "fromJSON": [Function],
      "items": Array [
        Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
      ],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "array",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "title": "string",
      "toJSON": [Function],
      "type": "string",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "string": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "description": null,
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "string",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "title": "string",
      "toJSON": [Function],
      "type": "string",
      "version": "2.0",
      "x-decorator": "FormItem",
      "x-reactions": Array [
        Object {
          "fullfill": Object {
            "schema": Object {},
          },
          "target": "xxx",
          "when": true,
        },
      ],
    },
  },
  "reducePatternProperties": [Function],
  "reduceProperties": [Function],
  "removePatternProperty": [Function],
  "removeProperty": [Function],
  "setAdditionalItems": [Function],
  "setAdditionalProperties": [Function],
  "setItems": [Function],
  "setPatternProperties": [Function],
  "setProperties": [Function],
  "toJSON": [Function],
  "type": "object",
  "version": "2.0",
  "x-decorator": "FormItem",
  "x-reactions": null,
}
`;

exports[`all methods 2`] = `
Object {
  "_isJSONSchemaObject": true,
  "addPatternProperty": [Function],
  "addProperty": [Function],
  "additionalProperties": Object {
    "_isJSONSchemaObject": true,
    "addPatternProperty": [Function],
    "addProperty": [Function],
    "complie": [Function],
    "fromJSON": [Function],
    "mapPatternProperties": [Function],
    "mapProperties": [Function],
    "reducePatternProperties": [Function],
    "reduceProperties": [Function],
    "removePatternProperty": [Function],
    "removeProperty": [Function],
    "setAdditionalItems": [Function],
    "setAdditionalProperties": [Function],
    "setItems": [Function],
    "setPatternProperties": [Function],
    "setProperties": [Function],
    "toJSON": [Function],
    "type": "string",
    "version": "2.0",
    "x-decorator": "FormItem",
  },
  "complie": [Function],
  "fromJSON": [Function],
  "mapPatternProperties": [Function],
  "mapProperties": [Function],
  "patternProperties": Object {
    "^[a-zA-Z0-9]*$": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "properties": Object {
        "made": Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "name": "made",
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 1,
        },
        "model": Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "name": "model",
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 2,
        },
        "year": Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "name": "year",
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 0,
        },
      },
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "version": "2.0",
      "x-decorator": "FormItem",
    },
  },
  "properties": Object {
    "array": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "additionalItems": Object {
        "_isJSONSchemaObject": true,
        "addPatternProperty": [Function],
        "addProperty": [Function],
        "complie": [Function],
        "fromJSON": [Function],
        "mapPatternProperties": [Function],
        "mapProperties": [Function],
        "reducePatternProperties": [Function],
        "reduceProperties": [Function],
        "removePatternProperty": [Function],
        "removeProperty": [Function],
        "setAdditionalItems": [Function],
        "setAdditionalProperties": [Function],
        "setItems": [Function],
        "setPatternProperties": [Function],
        "setProperties": [Function],
        "toJSON": [Function],
        "type": "string",
        "version": "2.0",
        "x-decorator": "FormItem",
      },
      "complie": [Function],
      "fromJSON": [Function],
      "items": Array [
        Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
      ],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "array",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "title": "string",
      "toJSON": [Function],
      "type": "string",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "string": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "description": null,
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "string",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "title": "string",
      "toJSON": [Function],
      "type": "string",
      "version": "2.0",
      "x-decorator": "FormItem",
      "x-reactions": Array [
        Object {
          "fullfill": Object {
            "schema": Object {},
          },
          "target": "xxx",
          "when": true,
        },
      ],
    },
  },
  "reducePatternProperties": [Function],
  "reduceProperties": [Function],
  "removePatternProperty": [Function],
  "removeProperty": [Function],
  "setAdditionalItems": [Function],
  "setAdditionalProperties": [Function],
  "setItems": [Function],
  "setPatternProperties": [Function],
  "setProperties": [Function],
  "toJSON": [Function],
  "type": "object",
  "version": "2.0",
  "x-decorator": "FormItem",
  "x-reactions": null,
}
`;

exports[`all methods 3`] = `
Object {
  "_isJSONSchemaObject": true,
  "addPatternProperty": [Function],
  "addProperty": [Function],
  "additionalProperties": Object {
    "_isJSONSchemaObject": true,
    "addPatternProperty": [Function],
    "addProperty": [Function],
    "complie": [Function],
    "fromJSON": [Function],
    "mapPatternProperties": [Function],
    "mapProperties": [Function],
    "reducePatternProperties": [Function],
    "reduceProperties": [Function],
    "removePatternProperty": [Function],
    "removeProperty": [Function],
    "setAdditionalItems": [Function],
    "setAdditionalProperties": [Function],
    "setItems": [Function],
    "setPatternProperties": [Function],
    "setProperties": [Function],
    "toJSON": [Function],
    "type": "string",
    "version": "2.0",
    "x-decorator": "FormItem",
  },
  "complie": [Function],
  "fromJSON": [Function],
  "mapPatternProperties": [Function],
  "mapProperties": [Function],
  "patternProperties": Object {},
  "properties": Object {
    "array": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "additionalItems": Object {
        "_isJSONSchemaObject": true,
        "addPatternProperty": [Function],
        "addProperty": [Function],
        "complie": [Function],
        "fromJSON": [Function],
        "mapPatternProperties": [Function],
        "mapProperties": [Function],
        "reducePatternProperties": [Function],
        "reduceProperties": [Function],
        "removePatternProperty": [Function],
        "removeProperty": [Function],
        "setAdditionalItems": [Function],
        "setAdditionalProperties": [Function],
        "setItems": [Function],
        "setPatternProperties": [Function],
        "setProperties": [Function],
        "toJSON": [Function],
        "type": "string",
        "version": "2.0",
        "x-decorator": "FormItem",
      },
      "complie": [Function],
      "fromJSON": [Function],
      "items": Array [
        Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
      ],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "array",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "title": "string",
      "toJSON": [Function],
      "type": "string",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
  },
  "reducePatternProperties": [Function],
  "reduceProperties": [Function],
  "removePatternProperty": [Function],
  "removeProperty": [Function],
  "setAdditionalItems": [Function],
  "setAdditionalProperties": [Function],
  "setItems": [Function],
  "setPatternProperties": [Function],
  "setProperties": [Function],
  "toJSON": [Function],
  "type": "object",
  "version": "2.0",
  "x-decorator": "FormItem",
  "x-reactions": null,
}
`;

exports[`all methods 4`] = `
Object {
  "_isJSONSchemaObject": true,
  "addPatternProperty": [Function],
  "addProperty": [Function],
  "complie": [Function],
  "description": null,
  "fromJSON": [Function],
  "mapPatternProperties": [Function],
  "mapProperties": [Function],
  "name": "string",
  "reducePatternProperties": [Function],
  "reduceProperties": [Function],
  "removePatternProperty": [Function],
  "removeProperty": [Function],
  "setAdditionalItems": [Function],
  "setAdditionalProperties": [Function],
  "setItems": [Function],
  "setPatternProperties": [Function],
  "setProperties": [Function],
  "title": "string",
  "toJSON": [Function],
  "type": "string",
  "version": "2.0",
  "x-decorator": "FormItem",
  "x-reactions": Array [
    Object {
      "fullfill": Object {
        "schema": Object {},
      },
      "target": "xxx",
      "when": true,
    },
  ],
}
`;

exports[`all methods 5`] = `
Object {
  "_isJSONSchemaObject": true,
  "addPatternProperty": [Function],
  "addProperty": [Function],
  "additionalItems": undefined,
  "additionalProperties": undefined,
  "complie": [Function],
  "fromJSON": [Function],
  "items": Array [
    undefined,
  ],
  "mapPatternProperties": [Function],
  "mapProperties": [Function],
  "properties": Object {
    "xxx": undefined,
  },
  "reducePatternProperties": [Function],
  "reduceProperties": [Function],
  "removePatternProperty": [Function],
  "removeProperty": [Function],
  "setAdditionalItems": [Function],
  "setAdditionalProperties": [Function],
  "setItems": [Function],
  "setPatternProperties": [Function],
  "setProperties": [Function],
  "toJSON": [Function],
  "type": "object",
  "version": "2.0",
  "x-decorator": "FormItem",
}
`;

exports[`all methods 6`] = `
Object {
  "_isJSONSchemaObject": true,
  "addPatternProperty": [Function],
  "addProperty": [Function],
  "additionalItems": undefined,
  "additionalProperties": undefined,
  "complie": [Function],
  "fromJSON": [Function],
  "items": Array [
    undefined,
  ],
  "mapPatternProperties": [Function],
  "mapProperties": [Function],
  "properties": Object {
    "xxx": undefined,
  },
  "reducePatternProperties": [Function],
  "reduceProperties": [Function],
  "removePatternProperty": [Function],
  "removeProperty": [Function],
  "setAdditionalItems": [Function],
  "setAdditionalProperties": [Function],
  "setItems": [Function],
  "setPatternProperties": [Function],
  "setProperties": [Function],
  "toJSON": [Function],
  "type": "object",
  "version": "2.0",
  "x-decorator": "FormItem",
}
`;

exports[`all props 1`] = `
Object {
  "_isJSONSchemaObject": true,
  "addPatternProperty": [Function],
  "addProperty": [Function],
  "additionalProperties": Object {
    "_isJSONSchemaObject": true,
    "addPatternProperty": [Function],
    "addProperty": [Function],
    "complie": [Function],
    "fromJSON": [Function],
    "mapPatternProperties": [Function],
    "mapProperties": [Function],
    "reducePatternProperties": [Function],
    "reduceProperties": [Function],
    "removePatternProperty": [Function],
    "removeProperty": [Function],
    "setAdditionalItems": [Function],
    "setAdditionalProperties": [Function],
    "setItems": [Function],
    "setPatternProperties": [Function],
    "setProperties": [Function],
    "toJSON": [Function],
    "type": "string",
    "version": "2.0",
    "x-decorator": "FormItem",
  },
  "complie": [Function],
  "description": "description",
  "fromJSON": [Function],
  "mapPatternProperties": [Function],
  "mapProperties": [Function],
  "patternProperties": Object {
    "^[a-zA-Z0-9]*$": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "properties": Object {
        "made": Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "name": "made",
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        "model": Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "name": "model",
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        "year": Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "name": "year",
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
      },
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "version": "2.0",
      "x-decorator": "FormItem",
    },
  },
  "properties": Object {
    "array": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "additionalItems": Object {
        "_isJSONSchemaObject": true,
        "addPatternProperty": [Function],
        "addProperty": [Function],
        "complie": [Function],
        "fromJSON": [Function],
        "mapPatternProperties": [Function],
        "mapProperties": [Function],
        "reducePatternProperties": [Function],
        "reduceProperties": [Function],
        "removePatternProperty": [Function],
        "removeProperty": [Function],
        "setAdditionalItems": [Function],
        "setAdditionalProperties": [Function],
        "setItems": [Function],
        "setPatternProperties": [Function],
        "setProperties": [Function],
        "toJSON": [Function],
        "type": "number",
        "version": "2.0",
        "x-decorator": "FormItem",
      },
      "complie": [Function],
      "fromJSON": [Function],
      "items": Object {
        "_isJSONSchemaObject": true,
        "addPatternProperty": [Function],
        "addProperty": [Function],
        "complie": [Function],
        "fromJSON": [Function],
        "mapPatternProperties": [Function],
        "mapProperties": [Function],
        "reducePatternProperties": [Function],
        "reduceProperties": [Function],
        "removePatternProperty": [Function],
        "removeProperty": [Function],
        "setAdditionalItems": [Function],
        "setAdditionalProperties": [Function],
        "setItems": [Function],
        "setPatternProperties": [Function],
        "setProperties": [Function],
        "toJSON": [Function],
        "type": "string",
        "version": "2.0",
        "x-decorator": "FormItem",
      },
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "array",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "type": "array",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "array2": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "fromJSON": [Function],
      "items": Array [
        Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        Object {
          "_isJSONSchemaObject": true,
          "addPatternProperty": [Function],
          "addProperty": [Function],
          "complie": [Function],
          "fromJSON": [Function],
          "mapPatternProperties": [Function],
          "mapProperties": [Function],
          "reducePatternProperties": [Function],
          "reduceProperties": [Function],
          "removePatternProperty": [Function],
          "removeProperty": [Function],
          "setAdditionalItems": [Function],
          "setAdditionalProperties": [Function],
          "setItems": [Function],
          "setPatternProperties": [Function],
          "setProperties": [Function],
          "toJSON": [Function],
          "type": "object",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
      ],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "array2",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "type": "array",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "boolean": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "default": false,
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "boolean",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "type": "boolean",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "date": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "default": "2020-12-23",
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "date",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "type": "date",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "datetime": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "default": "2020-12-23 23:00:00",
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "datetime",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "type": "datetime",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "number": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "default": 100,
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "number",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "type": "number",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "string": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "default": "default",
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "string",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "required": true,
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "type": "string",
      "version": "2.0",
      "x-component": "Input",
      "x-component-props": Object {
        "placeholder": "placeholder",
      },
      "x-decorator": "FormItem",
      "x-decorator-props": Object {
        "labelCol": 3,
      },
      "x-disabled": true,
      "x-display": "visible",
      "x-editable": false,
      "x-hidden": false,
      "x-pattern": "readPretty",
      "x-reactions": Array [
        Object {
          "target": "xxx",
          "when": "{{aa > bb}}",
        },
      ],
      "x-read-only": true,
      "x-validator": Array [
        "phone",
      ],
    },
    "void": Object {
      "_isJSONSchemaObject": true,
      "addPatternProperty": [Function],
      "addProperty": [Function],
      "complie": [Function],
      "fromJSON": [Function],
      "mapPatternProperties": [Function],
      "mapProperties": [Function],
      "name": "void",
      "reducePatternProperties": [Function],
      "reduceProperties": [Function],
      "removePatternProperty": [Function],
      "removeProperty": [Function],
      "setAdditionalItems": [Function],
      "setAdditionalProperties": [Function],
      "setItems": [Function],
      "setPatternProperties": [Function],
      "setProperties": [Function],
      "toJSON": [Function],
      "type": "void",
      "version": "2.0",
    },
  },
  "reducePatternProperties": [Function],
  "reduceProperties": [Function],
  "removePatternProperty": [Function],
  "removeProperty": [Function],
  "setAdditionalItems": [Function],
  "setAdditionalProperties": [Function],
  "setItems": [Function],
  "setPatternProperties": [Function],
  "setProperties": [Function],
  "title": "title",
  "toJSON": [Function],
  "type": "object",
  "version": "2.0",
  "x-decorator": "FormItem",
}
`;
